--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "react": "^16.13.1",
     "react-bottom-scroll-listener": "^4.1.0",
     "react-dom": "^16.13.1",
+    "react-emoji-render": "^1.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-spinners": "^0.9.0"
