--- a/api/package.json
+++ b/api/package.json
@@ -8,10 +8,12 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-response-formatter": "^2.0.2",
+    "express-sanitizer": "^1.0.5",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.11",
