--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.0",
     "clsx": "^1.1.1",
+    "formik": "^2.2.5",
     "imagesloaded": "^4.1.4",
     "muuri": "^0.9.3",
     "react": "^16.13.1",
@@ -20,7 +21,9 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "react-spinners": "^0.9.0"
+    "react-spinners": "^0.9.0",
+    "suneditor-react": "^2.14.6",
+    "yup": "^0.31.0"
   },
   "scripts": {
     "start": "react-scripts start",
