--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.0",
     "clsx": "^1.1.1",
     "formik": "^2.2.5",
+    "highlight.js": "^10.4.1",
     "imagesloaded": "^4.1.4",
     "muuri": "^0.9.3",
     "react": "^16.13.1",
